Task. IaaC tools: Terraform/Hometask6/Modules/Azure/azurerm_public_ip.tf
resource "azurerm_public_ip" "main" {
  name                = "${var.prefix}-pip"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  allocation_method   = "Dynamic"
}
